--- a/ipas6beberapaFormatif.html
+++ b/ipas6beberapaFormatif.html
@@ -6,15 +6,20 @@
     <title>Asesmen Formatif B.Indonesia Kelas 6</title>
     <link rel="icon" href="dl.png" type="image/x-icon">
     <style>
+        /* Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
-            color: #333;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            color: #333;
         }
 
         header {
@@ -29,24 +34,58 @@
             font-size: 2em;
         }
 
+        /* Navigation */
         nav {
             background-color: #2a5fe5;
-            display: flex;
-            justify-content: center;
             padding: 10px;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
         }
 
-        nav a {
+        nav a, nav .dropdown {
             color: white;
             padding: 14px 20px;
             text-decoration: none;
             text-align: center;
+            position: relative;
+            display: block;
         }
 
-        nav a:hover {
+        nav a:hover, nav .dropdown:hover {
             background-color: #2980B9;
         }
 
+        .dropdown {
+            cursor: pointer;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f1f1f1;
+            min-width: 200px;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 10px 20px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        /* Container */
         .container {
             flex: 1;
             padding: 20px;
@@ -56,13 +95,13 @@
 
         .category {
             margin-bottom: 40px;
+            text-align: center;
         }
 
         .category h2 {
             font-size: 1.5em;
             color: #333;
-            text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
 
         .menu-list {
@@ -79,10 +118,9 @@
             border-radius: 8px;
             text-align: center;
             font-size: 1.1em;
-            cursor: pointer;
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
             width: 200px;
-            box-sizing: border-box;
+            cursor: pointer;
         }
 
         .menu-item:hover {
@@ -94,14 +132,29 @@
         footer {
             background-color: #2355d4;
             color: white;
-            padding: 20px;
             text-align: center;
+            padding: 20px;
+            font-size: 0.9em;
         }
 
         footer p {
             margin: 0;
-            font-size: 0.9em;
         }
+           /* Responsive Adjustments */
+           @media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+            }
+
+            nav a {
+                margin: 5px 0;
+            }
+
+            .card-container {
+                grid-template-columns: 1fr;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -113,46 +166,161 @@
 <nav>
     <a href="index.html">Kembali</a>
     <a href="Bank Soal.html">Bank Soal</a>
-    <a href="#resources">Modul Ajar</a>
+    <div class="dropdown">
+        Modul Ajar
+        <div class="dropdown-content">
+            <a href="#bab1">Bab 1</a>
+            <a href="#bab2">Bab 2</a>
+        </div>
+    </div>
     <a href="#resources">Video Pembelajaran</a>
     <a href="#contact">Buku Digital</a>
     <a href="#resources">Forum Diskusi</a>
 </nav>
 
 <div class="container">
-    <div class="category">
-        <h2>BAB 1</h2>
-        <h2>Selamatkan Makhluk Hidup</h2>
-        <h2>Tumbuhan Sahabatku</h2>
-
+    <div class="category" id="bab1">
+        <h2>BAB 1: Bangga Menjadi Anak Indonesia</h2>
+        <h3>1. Unsur intrinsik cerita
+            2. Surat resmi dan surat
+            pribadi
+            3. Mengisi formulir
+            4. Menulis surat
+            elektronik</h3>
         <div class="menu-list">
             <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_4.html">Formatif 1.4</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.9</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.10</a></div>
+        </div>
+    </div>
+
+    <div class="category" id="bab2">
+        <h2>BAB 2: Tumbuhan Sahabatku</h2>
+        <div class="menu-list">
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.9</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.10</a></div>
+        </div>
+    </div>
+    <div class="category" id="bab2">
+        <h2>BAB 3: Tumbuhan Sahabatku</h2>
+        <div class="menu-list">
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.9</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.10</a></div>
+        </div>
+    </div>
+    <div class="category" id="bab2">
+        <h2>BAB 4: Tumbuhan Sahabatku</h2>
+        <div class="menu-list">
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.9</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.10</a></div>
+        </div>
+    </div>
+    <div class="category" id="bab2">
+        <h2>BAB 5: Anak-Anak yang Mengubah Dunia</h2>
+        <h3>1. Peta berpikir
+            2. Menulis halus
+            ‘kutipan tokoh’
+            3. Membuat poster
+            4. Menyampaikan
+            pendapat
+            5. Menulis naskah
+            pidato
+            6. Berpidato di depan
+            kelas</h3>
+        <div class="menu-list">
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1_1.html">Formatif 1.1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.5</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.6</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.7</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_4.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.9</a></div>
+        </div>
+    </div>
+    <div class="category" id="bab2">
+        <h2>BAB 6: Tumbuhan Sahabatku</h2>
+        <div class="menu-list">
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.9</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.10</a></div>
+        </div>
+    </div>
+    <div class="category" id="bab2">
+        <h2>BAB 7: Tumbuhan Sahabatku</h2>
+        <div class="menu-list">
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.9</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.10</a></div>
+        </div>
+    </div>
+    <div class="category" id="bab2">
+        <h2>BAB 8: Tumbuhan Sahabatku</h2>
+        <div class="menu-list">
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.9</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.10</a></div>
         </div>
     </div>
 </div>
 
 <footer>
-    <p>&copy; 2024 Video Pembelajaran. Semua hak cipta dilindungi.</p>
+    <p>&copy; 2024 Buku Digital. Semua hak cipta dilindungi.</p>
 </footer>
-
-<script>
-    // Menangani klik untuk mencegah jeda
-    document.querySelectorAll('.menu-item a').forEach(item => {
-        item.addEventListener('click', function(event) {
-            event.preventDefault(); // Mencegah perilaku bawaan
-            const url = this.getAttribute('href');
-            // Navigasi langsung tanpa jeda
-            window.location.href = url;
-        });
-    });
-</script>
 
 </body>
 </html>
